debugged layout issue in profile carousel

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,23 +75,26 @@ ul.dropdown-content.select-dropdown li span {
 
 .repheadshot {
   display: inline-block;
-  height: 200px;
-  width: 200px;
   background-repeat: no-repeat;
   border-radius: 100%;
   background-attachment: scroll;
   background-size: 100%;
   transition: opacity .25s;
+  height: 200px;
+  width: 200px;
 }
 
 .repinfo {
   display: inline-block;
 }
 
-.headshot-wrapper {
+.profile-info {
   display: inline-block;
   padding: 1%;
   margin: 1%;
+  height: 200px;
+  width: 200px;
+  vertical-align: text-top;
 }
 
 .bill-container {
